--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="game">
+        <div class="cell" id="celula1"></div>
+        <div class="cell" id="celula2"></div>
+        <div class="cell" id="celula3"></div>
+        <div class="cell" id="celula4"></div>
+        <div class="cell" id="celula5"></div>
+        <div class="cell" id="celula6"></div>
+        <div class="cell" id="celula7"></div>
+        <div class="cell" id="celula8"></div>
+        <div class="cell" id="celula9"></div>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
