--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <h1>Jogo da Velha</h1>
     <div class="game">
         <div class="cell" id="celula1"></div>
         <div class="cell" id="celula2"></div>
